# agentic-frame

./: .gitignore  README.md
.claude-plugin/: plugin.json
skills/animate-manim/: LICENSE.upstream  README.md  SKILL.md  install.md  pyproject.toml
skills/video-edit/: README.md  SKILL.md  install.md  pyproject.toml
skills/video-edit/helpers/: grade.py  hybrie_client.py  narrate.py  pack_transcripts.py  render.py  timeline_view.py  transcribe.py  transcribe_batch.py
tasks/: lessons.md  todo.md
