[project]
name = "video-edit"
version = "0.1.0"
description = "Video-editing skill powered by HybrIE — local Whisper STT, ffmpeg renderer."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pillow>=10.2",
    "numpy>=1.26",
    "librosa>=0.10; python_version<'3.13'",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.5",
]
